--- a/main/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
+++ b/main/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - http://blog.longle.net</title>
 
-    <link href="/Content/kendo/2013.2.716/kendo.common.min.css" rel="stylesheet" />
+    @*<link href="/Content/kendo/2013.2.716/kendo.common.min.css" rel="stylesheet" />
     <link href="/Content/kendo/2013.2.716/kendo.bootstrap.min.css" rel="stylesheet" />
-    
+    *@
     @Styles.Render("~/Content/kendo/2013.2.716/css")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://blog.longle.net" class="brand">blog.longle.net</a>
+                <a href="http://blog.longle.net" class="brand">CBRE SSRS</a>
                 @*@Html.ActionLink("", "Index", "Home", null, new { @class = "brand" })*@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
