--- a/dev/Northwind.Web/Areas/Spa/Views/Product/Index.cshtml
+++ b/dev/Northwind.Web/Areas/Spa/Views/Product/Index.cshtml
@@ -48,6 +48,7 @@
 
             addRoute("/", "home", "/spa/product/home");
             addRoute("/list", "list", "/spa/product/list");
+            addRoute("/listAsync", "listAsync", "/spa/product/listAsync");
             addRoute("/edit/:id", "edit", "/spa/product/edit");
 
             router.start();
