--- a/dev/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
+++ b/dev/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                         <li>@Html.ActionLink("Up", "Index", "Home", new { Area = "" }, new { })</li>
                         <li><a href="#/">Home</a></li>
                         <li><a href="#/list">Products</a></li>
+                        <li><a href="#/listAsync">Products Async</a></li>
                     </ul>
                 </div>
             </div>
