--- a/dev/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
+++ b/dev/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         <li><a href="#/">Home</a></li>
                         <li><a href="#/list">Products</a></li>
                         <li><a href="#/listAsync">Products Async</a></li>
+                        <li><a href="/glimpse.axd">Glimpse</a></li>
                     </ul>
                 </div>
             </div>
