--- a/main/Northwind.Web/Areas/Spa/Views/Product/List.cshtml
+++ b/main/Northwind.Web/Areas/Spa/Views/Product/List.cshtml
@@ -7,114 +7,162 @@
         <h2>Technlogy Stack</h2>
         <h3><a href="http://blog.longle.net">http://blog.longle.net</a></h3>
         <p>ASP.NET MVC 4, Web API, OData, Entity Framework 6 CTP, EntityFramework CE 6 RC1, Visual Studio 2013 Preview, Sql Server CE, Twitter Bootstrap, Kendo UI Web, Azure Website PaaS (<a href="http://www.windowsazure.com/en-us/develop/net/aspnet/" target="blank">free!</a>)</p>
-        <br/>
+        <br />
         <p><a class="btn" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
 </div>
 
-<br/><br />
-    <div class="k-content" style="width: 100%">
-        <div id="productsForm">
-            <div id="productGrid"
-                 data-role="grid"
-                 data-sortable="true"
-                 data-pageable="true"
-                 data-filterable="true"
-                 data-bind="source: dataSource, events: { dataBound: dataBound, change: onChange }"
-                 data-editable="inline"
-                 data-selectable="true"
-                 data-columns='[
-                    { field: "ProductID", title: "Id", width: "50px" }, 
-                    { field: "ProductName", title: "Name", width: "300px" }, 
-                    { field: "UnitPrice", title: "Price", format: "{0:c}", width: "100px" },                    
-                    { field: "Discontinued", width: "150px" }, 
-                    { command : [ "edit", "destroy", { text: "Edit Details", click: editProduct } ], title: "Action",  } ]'>
-            </div>
+<br /><br />
+<div class="k-content" style="width: 100%">
+    <div id="productsForm">
+        <div id="productGrid"
+             data-role="grid"
+             data-sortable="true"
+             data-pageable="true"
+             data-filterable="true"
+             data-bind="source: dataSource, events: { dataBound: dataBound, change: onChange }"
+             data-editable="inline"
+             data-selectable="true"
+             data-toolbar='[ { template: kendo.template($("#template").html()) } ]'
+             data-columns='[
+                    { field: "ProductID", title: "ID", width: "50px" },
+                    { field: "ProductName", title: "Name"},
+                    { field: "QuantityPerUnit", title: "Quantity", width: "200px" },
+                    { field: "UnitsInStock", title: "Stock", width: "90px" },
+                    { field: "UnitPrice", title: "Price", format: "{0:c}", width: "100px" },
+                    { field: "Discontinued", width: "150px" } ]'>
         </div>
-        <h3>Use Chrome or Firefox and click on OData (queries) Urls below for example results.</h3>
-        <ul>
-            <li><a href="/odata/$metadata">/odata/$metadata</a></li>
-            <li><a href="/odata/Product">/odata/Product</a></li>
-            <li><a href="/odata/Product/?$select=ProductID,ProductName">/odata/Product/?$select=ProductID,ProductName</a></li>
-            <li><a href="/odata/Product/?$orderby=ProductName&$skip=1&$top=2">/odata/Product/?$orderby=ProductName&$skip=1&$top=2</a></li>
-            <li><a href="/odata/Product/?$orderby=ProductName&$skip=1&$top=2">/odata/Product/?$orderby=ProductName&$skip=1&$top=2</a></li>
-            <li><a href="/odata/Product/?$inlinecount=allpages&$filter=UnitPrice ge 20">/odata/Product/?$inlinecount=allpages&$filter=UnitPrice ge 20</a></li>
-            <li><a href="/odata/Product/?$expand=Category">/odata/Product/?$expand=Category</a></li>
-            <li><a href="/odata/Product/?$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName">/odata/Product/?$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName</a></li>
-            <li><a href="/odata/Product/?$inlinecount=allpages&$orderby=ProductName&$skip=1&$top=2&$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName">/odata/Product/?$inlinecount=allpages&$orderby=ProductName&$skip=1&$top=2&$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName</a></li>
-        </ul>
-
     </div>
+    <h3>Use Chrome or Firefox and click on OData (queries) Urls below for example results.</h3>
+    <ul>
+        <li><a href="/odata/$metadata">/odata/$metadata</a></li>
+        <li><a href="/odata/Product">/odata/Product</a></li>
+        <li><a href="/odata/Product/?$select=ProductID,ProductName">/odata/Product/?$select=ProductID,ProductName</a></li>
+        <li><a href="/odata/Product/?$orderby=ProductName&$skip=1&$top=2">/odata/Product/?$orderby=ProductName&$skip=1&$top=2</a></li>
+        <li><a href="/odata/Product/?$orderby=ProductName&$skip=1&$top=2">/odata/Product/?$orderby=ProductName&$skip=1&$top=2</a></li>
+        <li><a href="/odata/Product/?$inlinecount=allpages&$filter=UnitPrice ge 20">/odata/Product/?$inlinecount=allpages&$filter=UnitPrice ge 20</a></li>
+        <li><a href="/odata/Product/?$expand=Category">/odata/Product/?$expand=Category</a></li>
+        <li><a href="/odata/Product/?$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName">/odata/Product/?$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName</a></li>
+        <li><a href="/odata/Product/?$inlinecount=allpages&$orderby=ProductName&$skip=1&$top=2&$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName">/odata/Product/?$inlinecount=allpages&$orderby=ProductName&$skip=1&$top=2&$expand=Category&$select=ProductID,ProductName,Category/CategoryID,Category/CategoryName</a></li>
+    </ul>
+
+</div>
+<script type="text/x-kendo-template" id="template">
+    <div class="toolbar">
+        <a class="k-button" onclick="editProduct(event);"><span class="k-icon k-i-tick"></span>Edit</a>
+        <a class="k-button" onclick="deleteProduct(event);"><span class="k-icon k-i-tick"></span>Delete</a>
+        <a class="k-button" onclick="editProductDetails(event);"><span class="k-icon k-i-tick"></span>Edit Details</a>
+    </div>
+</script>
 
 <script>
-    function editProduct(e) {
-        e.preventDefault();
-        var tr = $(e.currentTarget).closest("tr");
-        var dataItem = $("#productGrid").data("kendoGrid").dataItem(tr);
-        window.location.href = '#/edit/' + dataItem.ProductID;
-    }
+    var lastSelectedDataItem;
 
-    var lastSelectedProductId;
+    var editProductDetails = function (event) {
+        getSelectedRowDoAction(event, function (grid, row, dataItem) {
+            window.location.href = '#/edit/' + dataItem.ProductID;
+        });
+    };
+
+    var editProduct = function (event) {
+        getSelectedRowDoAction(event, function (grid, row) {
+            grid.editRow(row);
+        });
+    };
+
+    var deleteProduct = function (event) {
+        getSelectedRowDoAction(event, function(grid, row, dataItem) {
+            grid.dataSource.remove(dataItem);
+            grid.dataSource.sync();
+        });
+    };
+
+    var getSelectedRowDoAction = function (event, action) {
+        event.preventDefault();
+        var grid = $("#productGrid").data("kendoGrid");
+        var selectedRow = grid.select();
+        var selectedDataItem = grid.dataItem(selectedRow);
+        if (selectedRow.length > 0)
+            action(grid, selectedRow, selectedDataItem);
+        else
+            alert("Please select a row.");
+    };
+    
+
+    var Product = kendo.data.Model.define({
+        id: "ProductID",
+        fields: {
+            ProductID: { type: "number", editable: false, nullable: true },
+            ProductName: { type: "string", validation: { required: true } },
+            QuantityPerUnit: { type: "string", validation: { required: true } },
+            UnitsInStock: { type: "number", validation: { required: true } },
+            UnitPrice: { type: "number", validation: { required: true, min: 1 } },
+            Discontinued: { type: "boolean", validation: { min: 0, required: true } }
+        }
+    });
 
     var crudServiceBaseUrl = "/odata/Product";
-    var productsModel = kendo.observable({
-        dataSource: dataSource = new kendo.data.DataSource({
-            type: "odata",
-            transport: {
-                read: {
-                    url: crudServiceBaseUrl,
-                    dataType: "json"
-                },
-                update: {
-                    url: function (data) {
-                        return crudServiceBaseUrl + "(" + data.ProductID + ")";
-                    },
-                    dataType: "json"
-                },
-                destroy: {
-                    url: function (data) {
-                        return crudServiceBaseUrl + "(" + data.ProductID + ")";
-                    },
-                    dataType: "json"
-                }
+
+    var productDataSource = dataSource = new kendo.data.DataSource({
+        type: "odata",
+        transport: {
+            read: {
+                url: crudServiceBaseUrl,
+                dataType: "json"
             },
-            batch: false,
-            serverPaging: true,
-            serverSorting: true,
-            serverFiltering: true,
-            pageSize: 10,
-            schema: {
-                data: function (data) {
-                    return data.value;
+            update: {
+                url: function (data) {
+                    return crudServiceBaseUrl + "(" + data.ProductID + ")";
                 },
-                total: function (data) {
-                    return data["odata.count"];
-                },
-                errors: function (data) {
-                },
-                model: {
-                    id: "ProductID",
-                    fields: {
-                        ProductID: { type: "number", editable: false, nullable: true },
-                        ProductName: { type: "string", validation: { required: true } },
-                        UnitPrice: { type: "number", validation: { required: true, min: 1 } },
-                        Discontinued: { type: "boolean" },
-                        UnitsInStock: { type: "number", validation: { min: 0, required: true } }
-                    }
-                }
+                dataType: "json"
             },
-            error: function (e) {
-                //debugger;
-                var message = e.xhr.responseJSON["odata.error"].message.value;
-                var innerMessage = e.xhr.responseJSON["odata.error"].innererror.message;
-                alert(message + "\n\n" + innerMessage);
+            destroy: {
+                url: function (data) {
+                    return crudServiceBaseUrl + "(" + data.ProductID + ")";
+                },
+                dataType: "json"
             }
-        }),
+        },
+        batch: false,
+        serverPaging: true,
+        serverSorting: true,
+        serverFiltering: true,
+        pageSize: 10,
+        schema: {
+            data: function (data) {
+                return data.value;
+            },
+            total: function (data) {
+                return data["odata.count"];
+            },
+            errors: function (e) {
+                return e.errors;
+            },
+            model: Product
+        },
+        error: function (e) {
+            debugger;
+            var responseJson = e.xhr.responseJSON;
+            if (responseJson != undefined) {
+                if (responseJson["odata.error"] != undefined) {
+                    var error = responseJson["odata.error"];
+                    var message = error.message.value + '\n\n' + error.innererror.message;
+                    alert(message);
+                }
+            } else {
+                alert(e.xhr.status + "\n\n" + e.xhr.responseText + "\n\n" + e.xhr.statusText);
+            }
+            this.read();
+        }
+    });
+
+    var productsModel = kendo.observable({
+        dataSource: productDataSource,
         dataBound: function (arg) {
-            if (lastSelectedProductId == null) return; // check if there was a row that was selected
+            if (lastSelectedDataItem == null) return; // check if there was a row that was selected
             var view = this.dataSource.view(); // get all the rows
             for (var i = 0; i < view.length; i++) { // iterate through rows
-                if (view[i].ProductID == lastSelectedProductId) { // find row with the lastSelectedProductd
+                if (view[i].ProductID == lastSelectedDataItem.ProductID) { // find row with the lastSelectedProductd
                     var grid = arg.sender; // get the grid
                     grid.select(grid.table.find("tr[data-uid='" + view[i].uid + "']")); // set the selected row
                     break;
@@ -123,9 +171,8 @@
         },
         onChange: function (arg) {
             var grid = arg.sender;
-            var dataItem = grid.dataItem(grid.select());
-            lastSelectedProductId = dataItem.ProductID;
-        }
+            lastSelectedDataItem = grid.dataItem(grid.select());
+        },
     });
 
     $(document).bind("viewSwtichedEvent", function (e, args) { // subscribe to the viewSwitchedEvent
@@ -139,3 +186,12 @@
     });
 
 </script>
+<style scoped>
+    #productGrid .k-toolbar {
+        padding: .7em;
+    }
+
+    .toolbar {
+        float: right;
+    }
+</style>
