--- a/main/Northwind.Web/Areas/Spa/Views/Product/List.cshtml
+++ b/main/Northwind.Web/Areas/Spa/Views/Product/List.cshtml
@@ -49,28 +49,46 @@
 </div>
 <script type="text/x-kendo-template" id="template">
     <div class="toolbar">
-        <a class="k-button" onclick="editProduct(event);"><span class="k-icon k-i-tick"></span>Edit</a>
-        <a class="k-button" onclick="deleteProduct(event);"><span class="k-icon k-i-tick"></span>Delete</a>
-        <a class="k-button" onclick="editProductDetails(event);"><span class="k-icon k-i-tick"></span>Edit Details</a>
+        <a class="k-button" onclick="edit(event);"><span class="k-icon k-i-tick"></span>Edit</a>
+        <a class="k-button" onclick="remove(event);"><span class="k-icon k-i-tick"></span>Delete</a>
+        <a class="k-button" onclick="editDetails(event);"><span class="k-icon k-i-tick"></span>Edit Details</a>
     </div>
-</script>
+    <div class="toolbar" style="display:none">
+        <a class="k-button" onclick="save(event);"><span class="k-icon k-i-tick"></span>Save</a>
+        <a class="k-button" onclick="cancel(event);"><span class="k-icon k-i-tick"></span>Cancel</a>
+    </div></script>
 
 <script>
     var lastSelectedDataItem;
 
-    var editProductDetails = function (event) {
+    var save = function (event) {
+        getSelectedRowDoAction(event, function (grid) {
+            grid.saveRow();
+            $(".toolbar").toggle();
+        });
+    };
+
+    var cancel = function (event) {
+        getSelectedRowDoAction(event, function (grid) {
+            grid.cancelRow();
+            $(".toolbar").toggle();
+        });
+    };
+
+    var editDetails = function (event) {
         getSelectedRowDoAction(event, function (grid, row, dataItem) {
             window.location.href = '#/edit/' + dataItem.ProductID;
         });
     };
 
-    var editProduct = function (event) {
+    var edit = function (event) {
         getSelectedRowDoAction(event, function (grid, row) {
             grid.editRow(row);
+            $(".toolbar").toggle();
         });
     };
 
-    var deleteProduct = function (event) {
+    var remove = function (event) {
         getSelectedRowDoAction(event, function(grid, row, dataItem) {
             grid.dataSource.remove(dataItem);
             grid.dataSource.sync();
@@ -97,7 +115,7 @@
             QuantityPerUnit: { type: "string", validation: { required: true } },
             UnitsInStock: { type: "number", validation: { required: true } },
             UnitPrice: { type: "number", validation: { required: true, min: 1 } },
-            Discontinued: { type: "boolean", validation: { min: 0, required: true } }
+            Discontinued: { type: "boolean" }
         }
     });
 
