--- a/main/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
+++ b/main/Northwind.Web/Areas/Spa/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - http://blog.longle.net</title>
+    <title>@ViewBag.Title - CBRE Architecture & Design</title>
 
     <link href="/Content/kendo/2013.2.716/kendo.common.min.css" rel="stylesheet" />
     <link href="/Content/kendo/2013.2.716/kendo.bootstrap.min.css" rel="stylesheet" />
