--- a/main/Northwind.Web/Areas/Spa/Views/Product/List.cshtml
+++ b/main/Northwind.Web/Areas/Spa/Views/Product/List.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="span5">
         <h2>Technlogy Stack</h2>
-        <h3><a href="http://blog.longle.net">CBRE Architecture & Design</a></h3>
+        <h3><a href="http://blog.longle.net">blog.longle.net</a></h3>
         <p>ASP.NET MVC 4, Web API, OData, Entity Framework 6 CTP, EntityFramework CE 6 RC1, Visual Studio 2013 Preview, Sql Server CE, Twitter Bootstrap, Kendo UI Web, Azure Website PaaS (<a href="http://www.windowsazure.com/en-us/develop/net/aspnet/" target="blank">free!</a>)</p>
         <br />
         <p><a class="btn" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
