--- a/main/Northwind.Web/Areas/Spa/Views/Product/Home.cshtml
+++ b/main/Northwind.Web/Areas/Spa/Views/Product/Home.cshtml
@@ -5,7 +5,7 @@
 
 <div class="hero-unit">
     <h1>ASP.NET</h1>
-    <h2><a href="http://blog.longle.net">CBRE Architecture & Design</a></h2>
+    <h2><a href="http://blog.longle.net">blog.longle.net</a></h2>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
