--- a/releases/v3.1/Sample/Northwind.Web/Views/Shared/_Layout.cshtml
+++ b/releases/v3.1/Sample/Northwind.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
         <title>@ViewBag.Title - My ASP.NET Application</title>
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
-    </head>
+        <meta name="description" content="The description of my page" />
+</head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
