Remove Entity Framework from Repository.Pattern project for separation of concerns

--- a/main/Sample/Northwind.Entities/CodeTemplates/ReverseEngineerCodeFirst/Entity.tt
+++ b/main/Sample/Northwind.Entities/CodeTemplates/ReverseEngineerCodeFirst/Entity.tt
@@ -7,7 +7,7 @@
 #>
 using System;
 using System.Collections.Generic;
-using Repository.Pattern.Infrastructure;
+using Repository.Pattern.Ef6;
 
 namespace <#= code.EscapeNamespace(efHost.Namespace) #>
 {
