--- a/main/Sample/Northwind.Web/Views/Home/Index.cshtml
+++ b/main/Sample/Northwind.Web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="container body-content">
-        <ng-view ng-animate="{ enter: 'view-enter', leave: 'view-leave' }"></ng-view>
+        <ng-view></ng-view>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
