--- a/main/Sample/Northwind.Web/Views/Home/Index.cshtml
+++ b/main/Sample/Northwind.Web/Views/Home/Index.cshtml
@@ -4,10 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
+    
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+
     @Scripts.Render("~/bundles/modernizr")
+    
     <link href="~/Content/kendo/2014.1.318/kendo.common.min.css" rel="stylesheet" />
     <link href="~/Content/kendo/2014.1.318/kendo.bootstrap.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
