--- a/main/Sample/Northwind.Web/Views/Shared/_Layout.cshtml
+++ b/main/Sample/Northwind.Web/Views/Shared/_Layout.cshtml
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+
     <title>@ViewBag.Title</title>
+
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/kendo")
+
     @Scripts.Render("~/bundles/modernizr")
-    <link href="~/Content/kendo/2014.1.318/kendo.common.min.css" rel="stylesheet" />
-    <link href="~/Content/kendo/2014.1.318/kendo.bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,7 +28,7 @@
                     <li><a href="#/customer">Customer</a></li>
 
                     @*<li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Customer", "Index", "Customer", new { area = "" }, null)</li>*@
+                        <li>@Html.ActionLink("Customer", "Index", "Customer", new { area = "" }, null)</li>*@
                 </ul>
             </div>
         </div>
@@ -42,11 +44,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-
-    <script src="~/Scripts/angular.min.js"></script>
-    <script src="~/Scripts/kendo/2014.1.318/kendo.web.min.js"></script>
-    <script src="~/Scripts/angular-kendo.min.js"></script>
-    <script src="~/Scripts/app/js/app.js"></script>
+    @Scripts.Render("~/bundles/kendo")
 
     @RenderSection("scripts", required: false)
 </body>
