--- a/main/Sample/Northwind.Web/Views/Customer/Edit.cshtml
+++ b/main/Sample/Northwind.Web/Views/Customer/Edit.cshtml
@@ -69,26 +69,11 @@
             <button kendo-button ng-click="cancel()">Cancel</button>
 
             <style scoped>
-                dd {
-                    margin: 0px 0px 20px 0px;
-                    width: 100%;
-                }
-
-                label {
-                    font-size: small;
-                    font-weight: normal;
-                }
-
-                .k-textbox {
-                    width: 100%;
-                }
-
-                .k-info-colored {
-                    margin: 10px;
-                    padding: 10px;
-                }
+                dd { margin: 0px 0px 20px 0px; width: 100%; }
+                label { font-size: small; font-weight: normal; }
+                .k-textbox { width: 100%; }
+                .k-info-colored { margin: 10px; padding: 10px; }
             </style>
-
         </div>
     </div>
 </div>
