--- a/main/Sample/Northwind.Web/Views/Customer/Index.cshtml
+++ b/main/Sample/Northwind.Web/Views/Customer/Index.cshtml
@@ -30,10 +30,7 @@
                      k-on-change="onChange(kendoEvent)">
                 </div>
                 <style scoped>
-                    .toolbar {
-                        padding: 15px;
-                        float: right;
-                    }
+                    .toolbar { padding: 15px; float: right; }
                 </style>
             </div>
         </div>
