--- a/main/Sample/Northwind.Web/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/main/Sample/Northwind.Web/Areas/HelpPage/Views/Help/Index.cshtml
@@ -1,15 +1,12 @@
-@using System.Web.Http
-@using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using Northwind.Web.Areas.HelpPage.Models
-@model Collection<ApiDescription>
 
+@model Collection<ApiDescription>
 @{
     ViewBag.Title = "ASP.NET Web API Help Page";
 
     // Group APIs by controller
-    ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
+    var apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
 }
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
