--- a/main/Sample/Northwind.Web/Areas/HelpPage/Views/_ViewStart.cshtml
+++ b/main/Sample/Northwind.Web/Areas/HelpPage/Views/_ViewStart.cshtml
@@ -1,4 +1,3 @@
 ﻿@{
-    // Change the Layout path below to blend the look and feel of the help page with your existing web pages
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
